docs: update design paper to reflect moving bootstrap files into the .flixw directory